# simple-axum-notes-api

./: Cargo.toml
src/: main.rs
