[package]
name = "axum-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4", features = ["macros"]}
lazy_static = "1.4.0"
sequential-test = "0.2.4"
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
